# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yaml  spec.yaml
.github/workflows/: github-actions.yml
configuration/: base.yaml
migrations/: 20240321031259_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscription.rs
tests/: health_check.rs
