# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Rodrigo <contato@rodmedeiross.com.br>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
# env_logger = "0.9"
# log = "0.4"
tracing = {version = "0.1", features = ["log"]}
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"
once_cell = "1"
secrecy = {version = "0.8", features = ["serde"]}

[dependencies.sqlx] 
version = "0.7" 
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
